# ChessTrain

./: 1.txt  CMakeLists.txt  CMakePresets.json  README.md
include/ai/: ChessAi.h
include/game/: chessgame.h
src/AZai/: ai.cpp  ai.h
src/ai/: ChessAi.cpp
src/game/: chessgame.cpp
src/gui/: BoardWidget.cpp  BoardWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: test_game.cpp
